# zkpass-sdk

./: .env.example  .gitignore  .gitmodules  .npmrc  Cargo.toml  Dockerfile.ci  README.md  clean-header.sh  didpass.tgz  package-lock.json  package.json
didpass-demo/issuer-demo/: .env.example  .gitignore  .npmrc  README.md  jest.config.js  jest.setup.ts  package-lock.json  package.json  tsconfig.json  typedoc.json
didpass-demo/issuer-demo/tests/: Auth.test.ts  Credential.test.ts  JwsCredential.test.ts  QRGenerator.test.ts
didpass-demo/verifier-demo/: .env.example  .gitignore  .npmrc  Dockerfile.dev  README.md  docker-compose.dev-dependencies.yml  ngrok.yml  package-lock.json  package.json  tsconfig.json
didpass-demo/verifier-demo/prisma/: schema.prisma
didpass-mvp-demo/: .npmrc  README.md  package.json  tsconfig.json
didpass-mvp-demo/src/pages/: _app.tsx  index.tsx
didpass/issuer-demo/: package-lock.json  package.json
didpass/verifier-demo/: package-lock.json  package.json  tsconfig.json
docs/: CNAME  index.html
docs/rust/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/rust/castaway/: all.html  macro.match_type.html  sidebar-items.js
docs/rust/concurrent_queue/: enum.PopError.html
docs/rust/curl/: struct.Error.html  struct.FormError.html  struct.Protocols.html  struct.ShareError.html  struct.Version.html
docs/rust/curl_sys/: all.html  constant.CURLAUTH_ANYSAFE.html  constant.CURLAUTH_AWS_SIGV4.html  constant.CURLAUTH_DIGEST.html  constant.CURLAUTH_NONE.html  constant.CURLAUTH_NTLM_WB.html  constant.CURLCLOSEPOLICY_LEAST_TRAFFIC.html  constant.CURLCLOSEPOLICY_OLDEST.html  constant.CURLCLOSEPOLICY_SLOWEST.html  constant.CURLE_ABORTED_BY_CALLBACK.html  constant.CURLE_AGAIN.html  constant.CURLE_BAD_DOWNLOAD_RESUME.html  constant.CURLE_BAD_FUNCTION_ARGUMENT.html  (+420 more)
keygen/: .gitignore  README.md  generator.ts  package.json  tsconfig.json
keygen/common/: env.ts  signer.ts
keygen/interfaces/: postActionable.interface.ts
keygen/kms/: client.ts  kmsGenerator.ts
keygen/native/: index.ts  nativeGenerator.ts
rust/: .env.example  .gitignore  Cargo.toml  README.md  cargo-test.sh  download-so.sh  generate-docs.sh  submodules.sh  test.sh  update-subdirectories.sh
rust/localization/: en-US.ftl  id-ID.ftl
rust/privacy-apps/client_utils/: Cargo.toml
rust/privacy-apps/client_utils/src/: ffi_helper.rs  ffi_safe.rs  interface.rs  lib.rs  privacy_app_client.rs
rust/zkpass-client/: Cargo.toml
rust/zkpass-client/src/: helpers.rs  interface.rs  lib.rs  zkpass_client.rs
rust/zkpass-core/: Cargo.toml
rust/zkpass-core/src/: dvr_helpers.rs  errors.rs  interface.rs  jwt_helpers.rs  lib.rs  localization.rs  test.rs  user_data_helpers.rs
rust/zkpass-core/src/dvr_app/: dvr_helpers.rs  interface.rs  jwt_helpers.rs  mod.rs  user_data_helpers.rs
rust/zkpass-core/src/logger/: initiator.rs  logger.rs  mod.rs
rust/zkpass-core/src/privacy_apps/: interface.rs
rust/zkpass-core/src/socket/: connection.rs  errors.rs  globals.rs  local_socket.rs  mod.rs  signal.rs  vsock_socket.rs
rust/zkpass-core/src/utils/: mod.rs  query_utils.rs  yielding.rs
rust/zkpass-demo/: .env.example  Cargo.toml  README.md  build.rs
rust/zkpass-demo/src/: constants.rs  data_holder.rs  data_issuer.rs  helper.rs  lib_loader.rs  main.rs  proof_verifier.rs  sample_keys.rs  sample_proof.rs  test.rs
rust/zkpass-demo/tests/: integration_test.rs
rust/zkpass-query/risc0/host/: Cargo.toml
rust/zkpass-query/risc0/host/src/: exports.rs  lib.rs  test.rs  zkvm_adapter.rs
rust/zkpass-query/risc0/host/src/tests/: constants.rs  test.rs  ts_exports_test.rs
rust/zkpass-query/risc0/methods/guest/: Cargo.toml
rust/zkpass-query/sp1/script/: Cargo.toml
rust/zkpass-query/sp1/script/src/: exports.rs  lib.rs  test.rs  zkvm_adapter.rs
rust/zkpass-query/sp1/script/src/tests/: constants.rs  mod.rs  test.rs  ts_exports_test.rs
src/pages/: index.tsx
src/utils/: didpass.ts
test/data/: employee-onboarding-dvr.json  health-dvr.json  jane2-blood-test-result.json  john-profile.json
typescript/: .env.example  .npmrc  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: MyHolder.ts  MyIssuer.ts  MyVerifier.ts  index.ts
zkpass-client-wrappers/zkpass-client-react-native/: README.md  build-sdk-package.sh  build.sh  jest-setup.ts  package.json  tsconfig.json
zkpass-client-wrappers/zkpass-client-ts/: .npmignore  .npmrc.stag  package-lock.json  postinstall.js  tsconfig.json
zkpass-client/zkpass-control-panel/: Dockerfile
zkpass-control-panel/: .env.example  .gitignore  README.md  build.sh  dev-zkpass.env.enc  docker-compose.dev-dependencies.yml  docker-compose.yml  package-lock.json  package.json  prod-zkpass.env.enc  tsconfig.json
zkpass-control-panel/prisma/: schema.prisma  seed.ts
zkpass-core/localization/: en-US.ftl
zkpass-core/src/: interface.rs
zkpass-core/zkpass-ws/: sample-keys.json
zkpass-demo/: .env.local
zkpass-demo/Cargo.toml/: .trivyignore
zkpass-demo/client/: package-lock.json  package.json
zkpass-demo/issuer-verifier/: .env.development  next.config.js  package-lock.json  package.json
zkpass-demo/src/: Dockerfile.host  data_holder.rs  data_issuer.rs  sample_keys.rs  test.rs
zkpass-demo/tests/: Dockerfile.ws
zkpass-demo/wallet/: .env.example  .gitignore  README.md  metro.config.js  package-lock.json  package.json
zkpass-host/: .env.local  Cargo.toml
zkpass-host/src/: keys.rs  test.rs
zkpass-host/src/server/: local.rs  mod.rs  public_keys.rs  utils.rs
zkpass-md5-checksum/: Cargo.toml
zkpass-md5-checksum/src/: main.rs
zkpass-sdk/rust/zkpass/zkpass-core/: Cargo.toml
zkpass-sdk/rust/zkpass/zkpass-core/src/: interface.rs  test.rs
zkpass-sdk/typescript-cli/: README.md  package.json
zkpass-sdk/wallet/: .eslintignore  .npmrc  .prettierrc.json  App.tsx  README.md  package-lock.json  package.json
zkpass-svc-common/: Cargo.toml
zkpass-svc-common/src/interface/: socket.rs
zkpass-ws/: .env.local  prod-zkPass.env.enc
zkpass-ws/src/: keys.rs  local.rs  logger.rs  main.rs  mocks.rs  rabbitmq.rs
(+5357 files in other folders)
