[package]
name = "zkpass-svc-common"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zkpass-core = { path = "../zkpass-core" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tracing = "0.1.40"
thiserror = "1.0.50"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3.28"
lazy_static = "1.4.0"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
vsock = "0.5.0"

[dev-dependencies]
serial_test = "3.0.0"
