[package]
name = "zkpass-client"
version = "1.0.0-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
futures = "0.3.28"
httpmock = "0.6.8"
josekit = "0.8.3"
libloading = "0.8.1"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.40"
zkpass-query-types= { path = "../zkpass-query/types" }
zkpass-core = { path = "../zkpass-core" }
base64 = "0.21.5"
