[package]
name = "zkpass-core"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
base64 = "0.21.4"
futures = "0.3.28"
hex = "0.4.3"
josekit = "0.8.3"
jsonwebtoken = "8.3.0"
maplit = "1.0.2"
paste = "1.0.14"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.8"
thiserror = "1.0.50"
