[package]
name = "zkpass-core"
version = "1.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
base64 = "0.21.4"
futures = "0.3.28"
hex = "0.4.3"
josekit = "0.8.3"
jsonwebtoken = "8.3.0"
maplit = "1.0.2"
paste = "1.0.14"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.8"
thiserror = "1.0.50"
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
lazy_static = "1.4.0"
tracing = "0.1.40"
libc = "0.2"
openssl = { version = "0.10", features = ["vendored"] }
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
vsock = "0.5.0"

[dev-dependencies]
serial_test = "3.0.0"
