[package]
name = "zkpass-demo"
version = "0.3.0-rc.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
hex = "0.4.3"
josekit = "0.8.3"
serde = "1.0.188"
sha2 = "0.10.8"
zkpass-client = { path = "../zkpass-client" }
tokio = { version = "1.32.0", features = ["full"] }
lazy_static = "1.4.0"
uuid = { version = "1.2.2", features = ["v4"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zkpass-core = { path = "../zkpass-core" }
serde_json = "1.0.114"
clap = "3.0.0"
