[package]
name = "zkpass-demo"
version = "1.1.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0"
dotenv = "0.15.0"
futures = "0.3.28"
hex = "0.4.3"
josekit = "0.8.3"
lazy_static = "1.4.0"
maplit = "1.0.2"
serde = "1.0.188"
serde_json = "1.0.114"
sha2 = "0.10.8"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.2.2", features = ["v4"] }
zkpass-client = { path = "../zkpass-client" }
zkpass-core = { path = "../zkpass-core" }

[build-dependencies]
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
