[package]
name = "client_utils"
version = "1.5.0"
edition = "2021"
description = "Provide helpers for privacy app clients, especially for dealing with FFI-safety"

[lib]
crate-type = ["lib"]

[dependencies]
async-trait = "0.1.82"
base64 = "0.22.1"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
futures = "0.3.30"
http = "1.1.0"
httpmock = "0.7.0"
