[package]
name = "r0-zkpass-query"
version = "0.3.0-rc.1"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12"
zkpass-query = { path = "../../core" }
zkpass-core = { path = "../../../zkpass-core" }
r0-zkpass-query-methods = { path = "../methods" }
risc0-zkvm = { version = "0.20.1", features = ["prove"] }
serde = "1.0"
serde_cbor = "0.11.2"
serde_json = "1.0.97"
bincode = "1.3.3"
base64 = "0.21.4"
flate2 = "1.0.27"
libc = "0.2.150"
tracing = "0.1.40"
lazy_static = "1.4.0"
paste = "1.0.14"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]

