[package]
name = "sp1-zkpass-query"
version = "0.3.0-rc.1"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
lazy_static = "1.4.0"
serde = "1.0.197"
serde_json = "1.0.114"
sp1-core = { git = "https://github.com/succinctlabs/sp1.git" }
tracing = "0.1.40"
zkpass-query = { path = "../../core" }
zkpass-core = { path = "../../../zkpass-core" }
json = "0.12.4"
bincode = "1.3.3"
base64 = "0.21.7"
hex = "0.4.3"
sha2 = "0.10.8"
paste = "1.0.14"
