[package]
name = "r0-zkpass-query-guest"
version = "1.2.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.0.1", default-features = false, features = ['std'] }
json = "0.12"
zkpass-query = { path = "../../../core" }
serde = "1.0.152"
serde_json = "1.0.91"
serde_derive = "1.0.152"
